--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buildo.dev",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "author": "Julian Ćwirko <julian.io>",
   "license": "MIT",
   "homepage": "https://www.buildo.dev",
@@ -36,6 +36,7 @@
     "buffer": "6.0.3",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
+    "keccak": "^3.0.4",
     "lucide-react": "0.288.0",
     "next": "13.5.6",
     "next-themes": "0.2.1",
@@ -49,12 +50,13 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
+    "@types/keccak": "3.0.3",
     "@types/node": "20.8.7",
     "@types/qrcode": "1.5.4",
     "@types/react": "18.2.31",
     "@types/react-dom": "18.2.14",
-    "@typescript-eslint/eslint-plugin": "6.8.0",
-    "@typescript-eslint/parser": "6.8.0",
+    "@typescript-eslint/eslint-plugin": "6.9.0",
+    "@typescript-eslint/parser": "6.9.0",
     "autoprefixer": "10.4.16",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
