--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buildo.dev",
-  "version": "0.10.0",
+  "version": "0.11.0",
   "author": "Julian Ćwirko <julian.io>",
   "license": "MIT",
   "homepage": "https://www.buildo.dev",
@@ -17,8 +17,9 @@
     "prettier": "prettier --write '**/*.{js,ts,tsx,json}'"
   },
   "dependencies": {
+    "@aws-crypto/sha256-browser": "5.2.0",
     "@hookform/resolvers": "3.3.2",
-    "@multiversx/sdk-core": "12.15.0",
+    "@multiversx/sdk-core": "12.17.0",
     "@multiversx/sdk-transaction-decoder": "1.0.2",
     "@multiversx/sdk-wallet": "4.2.0",
     "@radix-ui/react-checkbox": "1.0.4",
@@ -31,39 +32,41 @@
     "@radix-ui/react-separator": "1.0.3",
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-tooltip": "1.0.7",
-    "@useelven/core": "0.12.0",
+    "@useelven/core": "0.14.0",
     "axios": "1.6.2",
     "bignumber.js": "9.1.2",
     "buffer": "6.0.3",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "keccak": "3.0.4",
-    "lucide-react": "0.294.0",
-    "next": "14.0.3",
+    "lucide-react": "0.301.0",
+    "next": "14.0.4",
     "next-themes": "0.2.1",
     "qrcode": "1.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "7.48.2",
-    "tailwind-merge": "2.0.0",
-    "tailwindcss": "3.3.5",
+    "react-hook-form": "7.49.2",
+    "sanitize-html": "2.11.0",
+    "tailwind-merge": "2.2.0",
+    "tailwindcss": "3.4.0",
     "tailwindcss-animate": "1.0.7",
     "zod": "3.22.4"
   },
   "devDependencies": {
     "@types/keccak": "3.0.4",
-    "@types/node": "20.10.1",
+    "@types/node": "20.10.5",
     "@types/qrcode": "1.5.5",
-    "@types/react": "18.2.39",
-    "@types/react-dom": "18.2.17",
-    "@typescript-eslint/eslint-plugin": "6.13.1",
-    "@typescript-eslint/parser": "6.13.1",
+    "@types/react": "18.2.45",
+    "@types/react-dom": "18.2.18",
+    "@types/sanitize-html": "2.9.5",
+    "@typescript-eslint/eslint-plugin": "6.15.0",
+    "@typescript-eslint/parser": "6.15.0",
     "autoprefixer": "10.4.16",
-    "eslint": "8.54.0",
-    "eslint-config-next": "14.0.3",
-    "eslint-config-prettier": "9.0.0",
-    "postcss": "8.4.31",
-    "prettier": "3.1.0",
-    "typescript": "5.3.2"
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "9.1.0",
+    "postcss": "8.4.32",
+    "prettier": "3.1.1",
+    "typescript": "5.3.3"
   }
 }
