--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-tooltip": "1.0.7",
     "@useelven/core": "0.15.2",
     "axios": "1.6.3",
+    "bech32": "^2.0.0",
     "bignumber.js": "9.1.2",
     "buffer": "6.0.3",
     "class-variance-authority": "0.7.0",
