add operations layout and prettier plugin

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,8 @@
   "singleQuote": true,
   "arrowParens": "always",
   "trailingComma": "es5",
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ]
 }
