--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@multiversx/sdk-core": "12.19.1",
     "@multiversx/sdk-transaction-decoder": "1.0.2",
     "@multiversx/sdk-wallet": "4.4.0",
-    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-accordion": "1.1.2",
     "@radix-ui/react-checkbox": "1.0.4",
     "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-dropdown-menu": "2.0.6",
@@ -47,7 +47,7 @@
     "qrcode": "1.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "7.51.1",
+    "react-hook-form": "7.51.2",
     "sanitize-html": "2.13.0",
     "tailwind-merge": "2.2.2",
     "zod": "3.22.4"
@@ -56,19 +56,19 @@
     "@types/keccak": "3.0.4",
     "@types/node": "20.11.30",
     "@types/qrcode": "1.5.5",
-    "@types/react": "18.2.69",
-    "@types/react-dom": "18.2.22",
+    "@types/react": "18.2.73",
+    "@types/react-dom": "18.2.23",
     "@types/sanitize-html": "2.11.0",
-    "@typescript-eslint/eslint-plugin": "7.3.1",
-    "@typescript-eslint/parser": "7.3.1",
+    "@typescript-eslint/eslint-plugin": "7.4.0",
+    "@typescript-eslint/parser": "7.4.0",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
     "eslint-config-prettier": "9.1.0",
     "postcss": "8.4.38",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.12",
-    "tailwindcss": "3.4.1",
+    "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "0.5.13",
+    "tailwindcss": "3.4.3",
     "tailwindcss-animate": "1.0.7",
     "typescript": "5.4.3"
   }
