--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buildo.dev",
-  "version": "0.14.3",
+  "version": "0.14.4",
   "author": "Julian Ćwirko <julian.io>",
   "license": "MIT",
   "homepage": "https://www.buildo.dev",
@@ -39,7 +39,7 @@
     "buffer": "6.0.3",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
-    "keccak": "3.0.4",
+    "js-sha3": "^0.9.3",
     "lucide-react": "0.400.0",
     "next": "14.2.4",
     "next-themes": "0.3.0",
@@ -53,7 +53,6 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@types/keccak": "3.0.4",
     "@types/node": "20.14.10",
     "@types/qrcode": "1.5.5",
     "@types/react": "18.3.3",
