--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buildo.dev",
-  "version": "0.14.4",
+  "version": "0.15.0",
   "author": "Julian Ćwirko <julian.io>",
   "license": "MIT",
   "homepage": "https://www.buildo.dev",
@@ -18,57 +18,60 @@
   },
   "dependencies": {
     "@aws-crypto/sha256-browser": "5.2.0",
-    "@hookform/resolvers": "3.9.0",
-    "@multiversx/sdk-core": "13.2.1",
-    "@multiversx/sdk-transaction-decoder": "1.0.2",
-    "@multiversx/sdk-wallet": "4.5.0",
-    "@radix-ui/react-accordion": "1.2.0",
-    "@radix-ui/react-checkbox": "1.1.1",
-    "@radix-ui/react-dialog": "1.1.1",
-    "@radix-ui/react-dropdown-menu": "2.1.1",
+    "@hookform/resolvers": "3.9.1",
+    "@multiversx/sdk-core": "13.14.1",
+    "@multiversx/sdk-transaction-decoder": "2.0.0",
+    "@multiversx/sdk-wallet": "4.6.0",
+    "@radix-ui/react-accordion": "1.2.1",
+    "@radix-ui/react-checkbox": "1.1.2",
+    "@radix-ui/react-dialog": "1.1.2",
+    "@radix-ui/react-dropdown-menu": "2.1.2",
     "@radix-ui/react-label": "2.1.0",
-    "@radix-ui/react-radio-group": "1.2.0",
-    "@radix-ui/react-select": "2.1.1",
+    "@radix-ui/react-radio-group": "1.2.1",
+    "@radix-ui/react-select": "2.1.2",
     "@radix-ui/react-separator": "1.1.0",
     "@radix-ui/react-slot": "1.1.0",
-    "@radix-ui/react-tooltip": "1.1.2",
-    "@useelven/core": "0.20.1",
-    "axios": "1.7.2",
+    "@radix-ui/react-tooltip": "1.1.3",
+    "@useelven/core": "0.22.0",
+    "axios": "1.7.7",
     "bech32": "2.0.0",
     "bignumber.js": "9.1.2",
     "buffer": "6.0.3",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "js-sha3": "^0.9.3",
-    "lucide-react": "0.400.0",
-    "next": "14.2.4",
-    "next-themes": "0.3.0",
-    "qrcode": "1.5.3",
+    "lucide-react": "0.456.0",
+    "next": "15.0.3",
+    "next-themes": "0.4.3",
+    "qrcode": "1.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-hook-form": "7.52.1",
-    "sanitize-html": "2.13.0",
-    "sonner": "1.5.0",
-    "tailwind-merge": "2.3.0",
+    "react-hook-form": "7.53.2",
+    "sanitize-html": "2.13.1",
+    "sonner": "1.7.0",
+    "tailwind-merge": "2.5.4",
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@types/node": "20.14.10",
+    "@types/node": "22.9.0",
     "@types/qrcode": "1.5.5",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "@types/sanitize-html": "2.11.0",
-    "@typescript-eslint/eslint-plugin": "7.15.0",
-    "@typescript-eslint/parser": "7.15.0",
-    "autoprefixer": "10.4.19",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.4",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "@types/sanitize-html": "2.13.0",
+    "@typescript-eslint/eslint-plugin": "8.13.0",
+    "@typescript-eslint/parser": "8.13.0",
+    "autoprefixer": "10.4.20",
+    "eslint": "9.14.0",
+    "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "9.1.0",
-    "postcss": "8.4.39",
-    "prettier": "3.3.2",
-    "prettier-plugin-tailwindcss": "0.6.5",
-    "tailwindcss": "3.4.4",
+    "postcss": "8.4.47",
+    "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "0.6.8",
+    "tailwindcss": "3.4.14",
     "tailwindcss-animate": "1.0.7",
-    "typescript": "5.5.3"
+    "typescript": "5.6.3"
+  },
+  "overrides": {
+    "rxjs": "7.8.1"
   }
 }
