--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buildo.dev",
-  "version": "0.15.1",
+  "version": "0.16.0",
   "author": "Julian Ćwirko <julian.io>",
   "license": "MIT",
   "homepage": "https://www.buildo.dev",
@@ -10,7 +10,7 @@
   },
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -18,57 +18,57 @@
   },
   "dependencies": {
     "@aws-crypto/sha256-browser": "5.2.0",
-    "@hookform/resolvers": "3.9.1",
-    "@multiversx/sdk-core": "13.14.1",
+    "@hookform/resolvers": "4.1.3",
+    "@multiversx/sdk-core": "13.17.2",
     "@multiversx/sdk-transaction-decoder": "2.0.0",
-    "@radix-ui/react-accordion": "1.2.1",
-    "@radix-ui/react-checkbox": "1.1.2",
-    "@radix-ui/react-dialog": "1.1.2",
-    "@radix-ui/react-dropdown-menu": "2.1.2",
-    "@radix-ui/react-label": "2.1.0",
-    "@radix-ui/react-radio-group": "1.2.1",
-    "@radix-ui/react-select": "2.1.2",
-    "@radix-ui/react-separator": "1.1.0",
-    "@radix-ui/react-slot": "1.1.0",
-    "@radix-ui/react-tooltip": "1.1.3",
-    "@useelven/core": "0.22.0",
-    "axios": "1.7.7",
+    "@radix-ui/react-accordion": "1.2.3",
+    "@radix-ui/react-checkbox": "1.1.4",
+    "@radix-ui/react-dialog": "1.1.6",
+    "@radix-ui/react-dropdown-menu": "2.1.6",
+    "@radix-ui/react-label": "2.1.2",
+    "@radix-ui/react-radio-group": "1.2.3",
+    "@radix-ui/react-select": "2.1.6",
+    "@radix-ui/react-separator": "1.1.2",
+    "@radix-ui/react-slot": "1.1.2",
+    "@radix-ui/react-tooltip": "1.1.8",
+    "@useelven/core": "0.23.0",
+    "axios": "1.8.2",
     "bech32": "2.0.0",
     "bignumber.js": "9.1.2",
     "buffer": "6.0.3",
-    "class-variance-authority": "0.7.0",
+    "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "js-sha3": "^0.9.3",
-    "lucide-react": "0.456.0",
-    "next": "15.0.3",
-    "next-themes": "0.4.3",
+    "js-sha3": "0.9.3",
+    "lucide-react": "0.479.0",
+    "next": "15.2.1",
+    "next-themes": "0.4.4",
     "qrcode": "1.5.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-hook-form": "7.53.2",
-    "sanitize-html": "2.13.1",
-    "sonner": "1.7.0",
-    "tailwind-merge": "2.5.4",
-    "zod": "3.23.8"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-hook-form": "7.54.2",
+    "sanitize-html": "2.14.0",
+    "sonner": "2.0.1",
+    "tailwind-merge": "3.0.2",
+    "zod": "3.24.2"
   },
   "devDependencies": {
-    "@types/node": "22.9.0",
+    "@tailwindcss/postcss": "4.0.12",
+    "@types/node": "22.13.10",
     "@types/qrcode": "1.5.5",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "@types/sanitize-html": "2.13.0",
-    "@typescript-eslint/eslint-plugin": "8.13.0",
-    "@typescript-eslint/parser": "8.13.0",
-    "autoprefixer": "10.4.20",
-    "eslint": "9.14.0",
-    "eslint-config-next": "15.0.3",
-    "eslint-config-prettier": "9.1.0",
-    "postcss": "8.4.47",
-    "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "0.6.8",
-    "tailwindcss": "3.4.14",
+    "@typescript-eslint/eslint-plugin": "8.26.0",
+    "@typescript-eslint/parser": "8.26.0",
+    "eslint": "9.22.0",
+    "eslint-config-next": "15.2.1",
+    "eslint-config-prettier": "10.1.1",
+    "postcss": "8.5.3",
+    "prettier": "3.5.3",
+    "prettier-plugin-tailwindcss": "0.6.11",
+    "tailwindcss": "4.0.12",
     "tailwindcss-animate": "1.0.7",
-    "typescript": "5.6.3"
+    "typescript": "5.8.2"
   },
   "overrides": {
     "rxjs": "7.8.1"
