--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint": "9.39.2",
     "eslint-config-next": "16.1.6",
     "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-prettier": "^5.5.5",
     "postcss": "8.5.6",
     "prettier": "3.8.1",
     "prettier-plugin-tailwindcss": "0.7.2",
